Fixed videos displaying on mobile in the blog posts

--- a/_scss/defold.scss
+++ b/_scss/defold.scss
@@ -2182,6 +2182,20 @@ a.page-route-card {
 	height: auto;
 }
 
+.page-video-panel {
+	width: 100%;
+	aspect-ratio: 16 / 9;
+	overflow: hidden;
+	background-color: #000;
+}
+
+.page-video-panel iframe {
+	display: block;
+	width: 100%;
+	height: 100%;
+	border: 0;
+}
+
 .product-hub-gif-shell {
 	perspective: 1800px;
 	transform-style: preserve-3d;
@@ -3288,6 +3302,30 @@ a.page-text-panel.page-post-panel-link .page-post-preview-title {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.post video {
+	max-width: 100%;
+	height: auto;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.post .page-media-frame {
+	width: 100%;
+	max-width: 640px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.content-flow > iframe[src*="youtube.com/embed"],
+.content-flow > iframe[src*="youtube-nocookie.com/embed"] {
+	width: 100%;
+	max-width: 100%;
+	aspect-ratio: 16 / 9;
+	height: auto;
+	display: block;
 }
 
 .center img {
