--- a/_scss/youtube.scss
+++ b/_scss/youtube.scss
@@ -2,20 +2,6 @@
 * YouTube Lazy Loading Styles
 ******************************************************************************/
 
-.page-video-panel {
-	width: 100%;
-	aspect-ratio: 16 / 9;
-	overflow: hidden;
-	background-color: #000;
-}
-
-.page-video-panel iframe {
-	display: block;
-	width: 100%;
-	height: 100%;
-	border: 0;
-}
-
 .page-feature-card-youtube.page-feature-card-with-media {
 	--feature-card-padding-inline: 1.7rem;
 	--feature-card-padding-top: 1.7rem;
